--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
     A Father!
     A Tester!
     A Coder!
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://xuruizhi.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: xuruizhi1983
 github_username:  xuruizhi
 
