--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,9 @@
 title: 安身、立命、静心、养性
 email: ruizhi_xu@163.com
 description: >- # this means to ignore newlines until "baseurl:"
-    A Father!
-    A Tester!
-    A Coder!
+    A Father! A Test Engineer! A Programmer!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://xuruizhi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://xuruizhi.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: xuruizhi1983
 github_username:  xuruizhi
 
