--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,15 @@ twitter_username: xuruizhi1983
 github_username:  xuruizhi
 
 # Build settings
-theme: minima
+
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
 
 markdown: kramdown
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
