--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ twitter_username: xuruizhi1983
 github_username:  xuruizhi
 
 # Build settings
-# theme: minima
-remote_theme: pages-themes/leap-day@v0.2.0
+theme: minima
+# remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
+#  - jekyll-remote-theme
 
 markdown: kramdown
 
