--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,9 @@ github_username:  xuruizhi
 
 # Build settings
 theme: minima
-# remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
-#  - jekyll-remote-theme
+show_excerpts: true
 
 markdown: kramdown
 
