--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ github_username:  xuruizhi
 
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
+- jekyll-feed
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 markdown: kramdown
