--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ plugins:
 # - jekyll-feed
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-markdown: kramdown
+markdown: GFM
 
 # Exclude from processing.
 # The following items will not be processed, by default.
