--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
     A Father! A Test Engineer! A Programmer!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://xuruizhi.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: xuruizhi1983
+twitter_username: xu_ruizhi
 github_username:  xuruizhi
 
 # Build settings
